[project]
name = "nonebot-powertoys"
version = "0.1.0"
description = "funny toys powered by Nonebot2"
authors = [
    { name = "BalconyJH", email = "balconyjh@gmail.com" },
]
dependencies = [
    "nonebot-adapter-onebot~=2.4",
    "nonebot2~=2.2",
    "nonebot-plugin-waiter~=0.3",
    "nonebot-plugin-send-anything-anywhere~=0.6",
    "nonebot-plugin-user~=0.2",
    "nonebot-plugin-orm[sqlite]~=0.7",
    "nonebot-plugin-apscheduler~=0.4",
]
requires-python = ">=3.9, <4.0"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest-xdist~=3.5",
    "nonebug~=0.3",
    "pytest-asyncio~=0.23",
    "isort~=5.13",
    "black~=24.4",
    "pre-commit~=3.7",
    "flake8~=7.0",
    "pytest-cov~=5.0",
    "nonebot2[fastapi,httpx,websockets]~=2.2",
    "nonebug-saa~=0.4",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.nonebot]
adapters = [
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = []
plugin_dirs = ["nonebot_powertoys/plugins"]
builtin_plugins = ["echo"]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E402",   # module-import-not-at-top-of-file
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
executionEnvironments = [
    { root = "./tests", extraPaths = [
        "./",
    ] },
    { root = "./" },
]

typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
[tool.pdm]
